--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
-
+*{
+    margin: 0;
+    padding: 0;
+}
 body{
     margin: 0;
     padding: 0;
@@ -15,4 +18,26 @@ header{
 header a{
     color: white;
     text-decoration: none;
+}
+
+.hero{
+    background-image: url(../img/imagen.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 30vh;
+}
+
+.hero h2{
+    color: white;
+    margin: 0;
+    border-radius: 5px;
+}
+
+h2{
+    color: white;
+}
+
+section p{
+    color: white;
 }
