--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,10 @@
     margin: 0;
     padding: 0;
 }
+
 body{
     margin: 0;
     padding: 0;
-    background-color: black;
 }
 
 header{
@@ -26,18 +26,41 @@ header a{
     background-position: center;
     background-repeat: no-repeat;
     height: 30vh;
+    text-align: center;
 }
 
 .hero h2{
     color: white;
     margin: 0;
-    border-radius: 5px;
+    display: inline-block;
+    padding: 15px 15px;
+    background-color: rgba(100, 100, 100, 0.65);
+    border-radius: 10px;
+    
+
+
+}
+
+.content{
+    background-color: grey;
+    border-radius: 10px;
+    border-style: solid;
+    border-color: grey;
+    width: 600px;
+    padding: 15px;
+    margin: 30px 0px 55px;
 }
 
 h2{
-    color: white;
+    color: blue;
 }
 
 section p{
+    color: black;
+}
+
+footer{
     color: white;
+    background-color: darkblue;
+    text-align: center;
 }
