--- a/css/style.css
+++ b/css/style.css
@@ -40,15 +40,19 @@ header a{
 
 }
 
-.content{
-    background-color: grey;
+.content{    
+    background-color: white;
     border-radius: 10px;
     border-style: solid;
-    border-color: grey;
+    border-color: white;
     width: 600px;
     padding: 15px;
     margin: 25px 0px 53px;
+    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.9);
 }
+
+
+
 
 h2{
     color: blue;
